# liveness-detection

./: .gitignore  README.md  blink_detection_liveness.py  consecutive_frame_liveness_detection.py  fourier_liveness_detection.py  optical_flow_liveness_detection.py  pyproject.toml
