[tool.poetry]
name = "liveness-detection"
version = "0.1.0"
description = ""
authors = ["Gustavo Valle"]
license = "MIT"
readme = "README.md"
packages = [{include = "liveness_detection"}]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.7.0.72"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
